# caffe

./: .gitignore  CMakeLists.txt  Makefile  README.md  appveyor.yml
cmake/: ConfigGen.cmake  Cuda.cmake  Dependencies.cmake  ProtoBuf.cmake  TargetResolvePrerequesites.cmake  Targets.cmake  WindowsCreateLinkHeader.cmake  WindowsUtils.cmake  lint.cmake
cmake/Modules/: FindGlog.cmake  FindHDF5Filters.cmake  FindLevelDB.cmake  FindMKL.cmake  FindMatlab.cmake  FindOpenBLAS.cmake  FindProtobuf.cmake
cmake/Templates/: CaffeConfig.cmake.in  export.hpp.in
conda/: caffe.yml
conda/caffe-cuda90-cudnn/: bld.bat  conda_build_config.yaml  meta.yaml
examples/mnist/: convert_mnist_data.cpp  train_lenet.ps1
examples/siamese/: convert_mnist_siamese_data.cpp
include/caffe/: common.hpp  layer.hpp  layer_factory.hpp  loss_layers.hpp  net.hpp  solver.hpp  vision_layers.hpp
include/caffe/util/: io.hpp  msvc.hpp
matlab/: CMakeLists.txt
matlab/+caffe/private/: caffe_.cpp
python/: CMakeLists.txt  requirements.txt
python/caffe/: _caffe.cpp
scripts/: build_conda.cmd  build_vcpkg.cmd  build_win.cmd  cpp_lint.py  windows_download_dependencies.cmake
scripts/appveyor/: appveyor_cmake_build_and_test.cmd  appveyor_install_cuda.cmd
src/caffe/: CMakeLists.txt  common.cpp  layer_factory.cpp  net.cpp  solver_factory.cpp
src/caffe/proto/: caffe.proto
src/caffe/test/: CMakeLists.txt
src/caffe/util/: db.cpp  db_lmdb.cpp  io.cpp  math_functions.cpp
tools/: CMakeLists.txt
windows/libcaffe/: libcaffe.vcxproj  libcaffe.vcxproj.filters
